--- a/Documentación/bibliografiaAnexos.bib
+++ b/Documentación/bibliografiaAnexos.bib
@@ -15,59 +15,76 @@
 }
 
 @misc{vuforia_devices,
+	author = "Vuforia",
 	title={Vuforia Supported Devices},
- 	url={https://library.vuforia.com/articles/Solution/vuforia-fusion-supported-devices.html}, 
+ 	howpublished={\url{https://library.vuforia.com/articles/Solution/vuforia-fusion-supported-devices.html}}, 
 	journal={Vuforia Fusion Supported Devices}}
 
 @misc{unityAssetPlant,
        author = "Badri Bebua",
        title = "Plants",
        year = "2019",
-       url = "https://assetstore.unity.com/packages/3d/vegetation/plants/plants-150261",
-       note = "[Internet; descargado ]"
+       howpublished = "\url{https://assetstore.unity.com/packages/3d/vegetation/plants/plants-150261}",
+       note = "[Unity Asset store; descargado ]"
 }
 
 @misc{unityFarm,
        author = "False Wisp Studios",
        title = "Cartoon Farm Crops",
        year = "2017",
-       url = "https://assetstore.unity.com/packages/3d/vegetation/plants/cartoon-farm-crops-79777",
-       note = "[Internet; descargado ]"
+       howpublished = "\url{https://assetstore.unity.com/packages/3d/vegetation/plants/cartoon-farm-crops-79777}",
+       note = "[Unity Asset store; descargado ]"
 }
 
 @misc{unityGarden,
        author = "GBAndrewGB",
        title = "Garden Realistic Tools",
        year = "2017",
-       url = "https://assetstore.unity.com/packages/3d/garden-realistic-tools-68960",
-       note = "[Internet; descargado ]"
+       howpublished = "\url{https://assetstore.unity.com/packages/3d/garden-realistic-tools-68960}",
+       note = "[Unity Asset store; descargado ]"
 }
 
 @misc{sketchfabGirasol,
        author = "AnemonaEspacial",
        title = "Girasol",
        year = "2020",
-       url = "https://sketchfab.com/3d-models/girasol-9e3e900295254b82bc144b3ca4333b80",
-       note = "[Internet; descargado ]"
+       howpublished = "\url{https://sketchfab.com/3d-models/girasol-9e3e900295254b82bc144b3ca4333b80}",
+       note = "[Sketchfab; descargado ]"
 }
 
 @misc{iconoFertilizante,
-       author = "AnemonaEspacial",
+       author = "flaticon",
        title = "Icono Fertilizante",
-       url = "https://www.flaticon.es/icono-gratis/fertilizante_1465973?term=fertilizante&page=1&position=45",
-       note = "[Internet; descargado ]"
+       howpublished = "\url{https://www.flaticon.es/icono-gratis/fertilizante_1465973?term=fertilizante&page=1&position=45}",
+       note = "[Flaticon; descargado ]"
 }
 
 @misc{iconoGotasLluvia,
-       author = "AnemonaEspacial",
-       title = "Icono Fertilizante",
-       url = "https://icon-icons.com/es/icono/clima-gotas-de-lluvia-lluvia/124168",
+       author = "",
+       title = "Clima Gotas de lluvia",
+       howpublished = "\url{https://icon-icons.com/es/icono/clima-gotas-de-lluvia-lluvia/124168}",
        note = "[Internet; descargado ]"
 }
 
 @misc{contingencias2020,
-	author = "AnemonaEspacial",
+	author = "iberley",
 	title = "Bases máximas y mínimas por contingencias comunes y tipos de cotización al Régimen General Seguridad Social para el año 2020",
-	url = "https://www.iberley.es/temas/bases-tipos-cotizacion-regimen-general-seguridad-social-ano-2020-11041",
+	howpublished = "\url{https://www.iberley.es/temas/bases-tipos-cotizacion-regimen-general-seguridad-social-ano-2020-11041}",
 	note = "[Internet; descargado 25-junio-2020 ]"
+}
+
+@misc{fontDinomouse,
+	author = "grove",
+	title = "Dinomouse Font",
+	url = "https://www.1001fonts.com/dinomouse-font.html",
+	howpublished ="\url{https://www.1001fonts.com/dinomouse-font.html}",
+	note = "[Internet; descargado 08-mayo-2020 ]"
+}
+
+@misc{fontRacingSans,
+	author = "Impallari Type",
+	title = "Racing Sans One Font",
+	url = "https://www.1001fonts.com/racing-sans-one-font.html",
+	howpublished ="\url{https://www.1001fonts.com/racing-sans-one-font.html}",
+	note = "[Internet; descargado 08-mayo-2020 ]"
 }
