--- a/Documentación/tex/A_Plan_proyecto.tex
+++ b/Documentación/tex/A_Plan_proyecto.tex
@@ -222,7 +222,7 @@ Los costes totales de material, son de 417,48~\euro.
 	\midrule
 	Total&224,99~\\}
 
-\subsubsection{Costes Totales.}
+\subsubsection{Costes Totales}
 
 	El coste total durante el desarrollo, es de 10549,68~\euro. En la tabla \ref{tabla:costesTotales} se pueden apreciar el conjunto de todos los supuestos costes calculados.
 	
@@ -235,7 +235,7 @@ Los costes totales de material, son de 417,48~\euro.
 
 \subsection{Viabilidad legal}
 
-En el caso de las licencias del software usado, se a aprovechado el uso gratuito. En el caso de Unity se trata de la licencia de uso personal. En el caso de Vuforia, el desarrollo de aplicaciones es gratuito, pero si se tuviese la intención de publicarla con uso comercial sería necesario acogerse a una de las licencias de pago. En la tabla \ref{tabla:licenciasSoftware} se encuentran recogidas el tipo de licencias usadas.
+En el caso de las licencias del software usado, se ha aprovechado el uso gratuito. En el caso de Unity se trata de la licencia de uso personal~\footnote{\url{https://store.unity.com/es/compare-plans}}. En el caso de Vuforia, el desarrollo de aplicaciones es gratuito, pero si se tuviese la intención de publicarla con uso comercial sería necesario acogerse a una de las licencias de pago. En la tabla \ref{tabla:licenciasSoftware} se encuentran recogidas el tipo de licencias usadas.
 
 El proyecto se han utilizado recursos para Unity de licencias gratuitas. Se tratan de algunos modelos 3D, imágenes, o Fonts que contaban con una licencia Creative Commons Atribution\footnote{\url{https://creativecommons.org/licenses/by/4.0/}} para su uso. En la tabla \ref{tabla:componentesUnity} se encunetran recogidos los distintos tipo de recursos usados en el proyectos Unity y sus licencias.
 
@@ -256,6 +256,8 @@ El proyecto se han utilizado recursos para Unity de licencias gratuitas. Se trat
 	Icono Fertilizante~\cite{iconoFertilizante}\footnote{\url{https://www.flaticon.es/icono-gratis/fertilizante_1465973?term=fertilizante&page=1&position=45}}&&Licencia de Flaticon
 	\\
 	Icono Gotas de lluvia~\cite{iconoGotasLluvia} &1 & Free for commercial use \\
-	Font1&&\\
-	Font2&&\\
+	Dinomouse-Regular~\cite{fontDinomouse}& &Free For
+	Commercial Use\\
+	RacingSansOne-Regular~\cite{fontRacingSans}& &Free For
+	Commercial Use\\
 	}
