--- a/Documentación/tex/B_Requisitos.tex
+++ b/Documentación/tex/B_Requisitos.tex
@@ -5,7 +5,7 @@ En el presente anexo se detallan los objetivos generales de la aplicación desar
 \section{Objetivos generales}
 \begin{itemize}
 	\item Un objetivo es el de estudiar el estado del arte en este tipo de aplicaciones de realidad aumentada. 
-	\item Realizar una aplicación para el ámbito educativo, empleando las aplicaciones AR estudiadas.
+	\item Realizar una aplicación para el ámbito educativo, empleando una de las aplicaciones AR estudiadas.
 	\item Utilizar MergeCube para el diseño e implementación de la aplicación.
 	\item Como ejercicio se ha diseñado el crecimiento de una planta, en el que se representaría las principales fases del crecimiento. Sería para usar en clases de biología de primaria/secundaria.
 	\item Que pueda usarse en el mayor número de dispositivos compatible posibles.
@@ -37,7 +37,7 @@ En el presente anexo se detallan los objetivos generales de la aplicación desar
 \begin{itemize}
 	\item \textbf{RNF 1:} La aplicación debe de resultar fácil de usar y intuitiva para el usuario.
 	\item \textbf{RNF 2:} Debe tener un rendimiento aceptable, para un uso cómodo.
-	\item \textbf{RNF 3:} Debe de ser responsiva, pudiéndose adaptar la interfaz, a la pantalla de cualquier dispositivo.
+	\item \textbf{RNF 3:} Debe de ser responsiva, pudiéndose adaptar la interfaz, a la pantalla de cualquier dispositivo-teléfono móvil.
 \end{itemize}
 \section{Especificación de requisitos}
 
