--- a/Documentación/tex/E_Manual_usuario.tex
+++ b/Documentación/tex/E_Manual_usuario.tex
@@ -1,7 +1,8 @@
 \apendice{Documentación de usuario}
 
 \section{Introducción}
-
+ En este apartado se explicara, los requisitos que necesita el usuario para ejecutar la aplicación, los pasos para su instalación, y cómo usarla.
+  
 \section{Requisitos de usuarios}
  El ejemplo desarrollado se trata de una aplicación Android, por lo que el primer requisito necesario es disponer de un Dispositivo Android, con una versión Android 6.0 (Marshmallow) o superior.
   
@@ -12,7 +13,9 @@
  	\item Sensor de Giróscopio.
  	\item Se recomienda una cámara que permita grabar mínimo en 720p.  
  \end{itemize}
-También es necesario disponer de un MergeCube, es valido tanto en papel como el original. 
+También es necesario disponer de un MergeCube, es valido tanto en papel como el original.
+la versión de papel puede descargarse desde el siguiente enlace:\url{https://www.arvrinedu.com/post/merge-cube-printable}. 
+
 \section{Instalación}
 
 Dado que la aplicación no se ha publicado en Play Store, se deberá descargar el APK desde (\href{URL}{text}ENLACE CARPETA REPOSITORIO).
@@ -52,9 +55,9 @@ Al seleccionar el modo deseado, la aplicación cambiará al modo de realidad aum
 
 En este modo, una vez que la cámara ya está activa, al enfocar el Mergecube, será detectado y se cargará el modelo de realidad aumentada. En este punto es importante recordar, que para una correcta detección de un marcador se precisa de estar en un ambiente con una iluminación adecuada para que el marcador no se vea afectado por sombras o focos de luz que reduzcan su visibilidad para el sensor de la cámara.
 
-\imagen{Anexos/appInterfaz}{Imagen pertenecienta a la aplicación, con la interfaz desplegada.}
+\imagen{Anexos/appInterfaz}{Imagen perteneciente a la aplicación, con la interfaz desplegada.}
 
-En caso de tener seleccionado el modo de capturar target, la interfaz contará con dos elementos adicionales. El primero se trata de una barra de colores (rojo, amarillo, verde) que indica la calidad optima para que el objetivo enfocado sea un target. El segundo elemento será el disparador situado en la parte inferior centrar. Una vez que tengamos un objetivo que cumpla los requisitos de calidad, podremos presionar el disparador, de manera que el target se guardará temporalmente (al cerrar la aplicación o volver al menú los target se reinician). Sobre este target capturado aparecera el modelo 3D correspondiente. Imagen---
+En caso de tener seleccionado el modo de capturar target, la interfaz contará con dos elementos adicionales. El primero se trata de una barra de colores (rojo, amarillo, verde) que indica la calidad optima para que el objetivo enfocado sea un target. El segundo elemento será el disparador situado en la parte inferior centrar. Una vez que tengamos un objetivo que cumpla los requisitos de calidad, podremos presionar el disparador, de manera que el target se guardará temporalmente (al cerrar la aplicación o volver al menú los target se reinician). Sobre este target capturado aparecerá el modelo 3D correspondiente. Imagen---
 
 En la barra de herramientas contamos con dos elementos, una regadera y un paquete de abono. La primera al seleccionar nos saldrá en pantalla una regadera que automáticamente echará agua, el objetivo es mover el dispositvo hasta conseguir que el agua caiga en el mergecube. Cuando el agua colisione con el modelo proyectado en el mergecube, la barra de progreso subirá hasta completarse. 
 El segundo elemento, se trata de un bote de fertilizante, al pulsarse saldrá en la pantalla un botón que al ser presionado saldrá delante como si se hubiese lanzado contra el mergecube.
