--- a/Documentación/anexos.tex
+++ b/Documentación/anexos.tex
@@ -65,6 +65,14 @@
 	\end{figure}
 	\FloatBarrier
 }
+\newcommand{\imagenMasPeque}[2]{
+	\begin{figure}%[!h]
+		\centering
+		\includegraphics[width=0.3\textwidth]{#1}
+		\caption{#2}\label{fig:#1}
+	\end{figure}
+	\FloatBarrier
+}
 
 \newcommand{\imagenflotante}[2]{
 	\begin{figure}%[!h]
@@ -402,10 +410,10 @@
 
 
 % Datos de portada
-\title{título del TFG \\Documentación Técnica}
+\title{Herramientas de realidad aumentada orientadas a docencia\\Documentación Técnica}
 \author{Saúl Martín Ibáñez}
-\tutor{Pedro Luis Sánchez Ortega}
-\cotutor{Álvar Arnaiz González}
+\tutor{Álvar Arnaiz González}
+\cotutor{Pedro Luis Sánchez Ortega}
 \date{\today}
 
 \begin{document}
