Planificación temporal Sprint 26

--- a/Documentación/tex/A_Plan_proyecto.tex
+++ b/Documentación/tex/A_Plan_proyecto.tex
@@ -139,6 +139,11 @@ En la aplicación teníamos previsto añadir una ayuda o guía para el usuario, 
  
  También se ha propuesto incluir un modo en el que se pueda hacer uso de la detección de múltiples marcadores simultáneos, pudiendo seleccionar y mostrar distintos modelos 3D, está propuesta puede ser viable pues en pruebas anteriores de captura target se había conseguido resultados similares, aun que sin probar a colocar modelos distintos en cada marcador.
 
+ \subsection{Sprint 26 (10/07/2020 - 13/07/2020)} 
+ Durante este sprint se revisaran las correcciones que los tutores han  indicado de la documentación que hay actualmente, para aplicarlas. También se procederá ha mejorar y completar mas apartados de la documentación.
+ 
+ Respecto a la aplicación se rematará las mejoras que se realizaron durante el anterior sprint. En el modo juego usando captura target, debe ser mejorado para que al realizar una segunda captura sea posible seguir jugando correctamente. En el modo multitarget, se incluyo la posibilidad de cambiar el tamaño de un modelo, hay que añadir la posibilidad de elegir el modelo que se quiere cambiar de tamaño. 
+ 
 \section{Estudio de viabilidad}
 
 \subsection{Viabilidad económica}
